Layout adapted to standards

--- a/content/contact.htm
+++ b/content/contact.htm
@@ -1,116 +1,124 @@
-<!-- saved from url=(0022)http://internet.e-mail -->
 <html>
 
 <head>
-<LINK rel="stylesheet" href="../scripts/layout.css" type="text/css">
-<script type="text/javascript">
+  <LINK rel="stylesheet" href="../scripts/layout.css" type="text/css">
+  <script type="text/javascript">
 
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-25411575-1']);
-  _gaq.push(['_trackPageview']);
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-25411575-1']);
+    _gaq.push(['_trackPageview']);
 
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
+    (function () {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
 
-</script>
+  </script>
 </head>
 
 <body bgcolor=Peachpuff>
 
-<table border="0" cellspacing="10" width="100%">
+  <table border="0" cellspacing="10" width="100%">
 
-  <tr><td width=25></td><td colspan="2"><hr></td><td width=25></td></tr>
+    <tr>
+      <td width=25></td>
+      <td colspan="2">
+        <hr>
+      </td>
+      <td width=25></td>
+    </tr>
 
-<!-- algemene gegevens -->
+    <!-- algemene gegevens -->
 
-  <tr>
-    <td></td>
+    <tr>
+      <td></td>
 
-    <td class=tekst>
-      <P>Beautique-in 
-      <BR>Abdis Johannastraat 28
-      <BR>2544 NE Den Haag
-      <BR>Tel. 0174 - 76 90 88
-    </td>
-  </tr>
+      <td class=tekst>
+        <P>Beautique-in
+          <BR>Abdis Johannastraat 28
+          <BR>2544 NE Den Haag
+          <BR>Tel. 0174 - 76 90 88
+      </td>
+    </tr>
 
-  <tr><td></td><td colspan="2"><hr></td></tr>
+    <tr>
+      <td></td>
+      <td colspan="2">
+        <hr>
+      </td>
+    </tr>
 
-<!-- Openingstijden -->
+    <!-- Openingstijden -->
 
-  <tr>
-    <td></td>
+    <tr>
+      <td></td>
 
-    <td class=tekst width=300>
-    Openingstijden:
-    <UL><TT>
-      <b>di.</b> 09.00 uur - 20.45 uur<BR>
-      <b>wo.</b> 09.00 uur - 20.45 uur<BR>
-      <b>do.</b> 09.00 uur - 20.45 uur<BR>
-      <b>vr.</b> 09.00 uur - 15.00 uur<BR>
-    </TT>
-    </UL>
-    </td>
+      <td class=tekst width=300>
+        Openingstijden:
+        <UL><TT>
+            <b>di.</b> 09.00 uur - 20.45 uur<BR>
+            <b>wo.</b> 09.00 uur - 20.45 uur<BR>
+            <b>do.</b> 09.00 uur - 20.45 uur<BR>
+            <b>vr.</b> 09.00 uur - 15.00 uur<BR>
+          </TT>
+        </UL>
+      </td>
 
-    <td class=tekst>
-    	Voor behandelingsafspraak of informatie e-mail of bel met:
-      <P>Sandra Valkenburg
-      <BR>Stivas Gediplomeerd Schoonheidsspecialiste
-      <P>E-mail: <a href="mailto:info@beautique-in.nl?Subject=E-mail t.a.v. Beautique-in">info@beautique-in.nl</a>
-      <BR>Tel. :0174 - 76 90 88
-    </td>
-  </tr>
+      <td class=tekst>
+        Voor behandelingsafspraak of informatie e-mail of bel met:
+        <P>Sandra Valkenburg
+          <BR>Stivas Gediplomeerd Schoonheidsspecialiste
+        <P>E-mail: <a href="mailto:info@beautique-in.nl?Subject=E-mail t.a.v. Beautique-in">info@beautique-in.nl</a>
+        <!-- <BR>Tel. :0174 - 76 90 88 -->
+      </td>
+    </tr>
 
-  <tr><td></td><td colspan="2"><hr></td></tr>
+    <tr>
+      <td></td>
+      <td colspan="2">
+        <hr>
+      </td>
+    </tr>
 
-  <tr>
-    <td></td>
-    <td class=tekst colspan="2">
-      <P>Beautique-in heeft parkeergelegenheid op eigen terrein, dus altijd een plek vrij voor u als klant!       
-    </td>
-  </tr>
+    <tr>
+      <td></td>
+      <td class=tekst colspan="2">
+        <P>Beautique-in heeft parkeergelegenheid op eigen terrein, dus altijd een plek vrij voor u als klant!
+      </td>
+    </tr>
 
-  <tr><td></td><td colspan="2"></td></tr>
+    <tr>
+      <td></td>
+      <td colspan="2"></td>
+    </tr>
 
-<!-- Routebeschrijving -->
+    <!-- Routebeschrijving -->
 
-  <tr>
-    <td></td>
-    <td class=tekst colspan="2" ALIGN=center>
-      &nbsp;<br>
-      Routebeschrijving Beautique-in
+    <tr>
+      <td></td>
+      <td class=tekst colspan="2" ALIGN=center>
+        &nbsp;<br>
+        Routebeschrijving Beautique-in
 
-     	<P ALIGN=center VALIGN=center>
+        <P ALIGN=center VALIGN=center>
 
-				<IMG SRC="../images/Abdis Johannastraat 28.jpg" ALT="Beautique-in locatie" width=800>
-      	
-      <P ALIGN=center VALIGN=center>
+          <IMG SRC="../images/Abdis Johannastraat 28.jpg" ALT="Beautique-in locatie" width=800>
 
-<script type="text/javascript">
-<!--
-      var anwb_tool="postnv";
-      var anwb_tool_type="normal";
-      var anwb_tool_tekst="Beautique-in, Abdis Johannastraat 28, 2544 NE Den Haag";
-      var anwb_tool_lon="4.24532";
-      var anwb_tool_lat="52.02871";
-      var anwb_tool_postcode="2544NE";
-      var anwb_tool_nr="28";
-//-->
-</script>
-<script type="text/javascript" src="http://www.anwb.nl/verkeer/verkeerstool.js"></script>     
+          <br>&nbsp;
 
-      <br>&nbsp;
-
-    </td>
-  </tr>
+      </td>
+    </tr>
 
 
-  <tr><td></td><td colspan="2"><hr></td></tr>
+    <tr>
+      <td></td>
+      <td colspan="2">
+        <hr>
+      </td>
+    </tr>
 
-</table>
+  </table>
 
 </BODY>
 
