--- a/content/diversen.htm
+++ b/content/diversen.htm
@@ -1,87 +1,147 @@
 <html>
 
 <head>
-<LINK rel="stylesheet" href="../scripts/layout.css" type="text/css">
-<script type="text/javascript">
+  <LINK rel="stylesheet" href="../scripts/layout.css" type="text/css">
+  <script type="text/javascript">
 
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-25411575-1']);
-  _gaq.push(['_trackPageview']);
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-25411575-1']);
+    _gaq.push(['_trackPageview']);
 
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
+    (function () {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
 
-</script>
+  </script>
 </head>
 
 <body bgcolor=Peachpuff>
 
-<table border="0" cellspacing="10" width="100%">
+  <table border="0" cellspacing="10" width="100%">
 
-  <tr><td width=25></td><td></td><td width=120></td><td width=25></td></tr>
+    <tr>
+      <td width=25></td>
+      <td></td>
+      <td width=120></td>
+      <td width=25></td>
+    </tr>
 
-  <tr><td width=25></td><td colspan="2"><hr></td><td width=25></td></tr>
+    <tr>
+      <td width=25></td>
+      <td colspan="2">
+        <hr>
+      </td>
+      <td width=25></td>
+    </tr>
 
-<!-- DIVERSEN -->
+    <!-- DIVERSEN -->
 
-  <tr>
-    <td></td>
-    <td class=title colspan="2">
-      <center>
-        DIVERSEN
-    </td>
-    <td></td>
-  </tr>
+    <tr>
+      <td></td>
+      <td class=title colspan="2">
+        <center>
+          DIVERSEN
+      </td>
+      <td></td>
+    </tr>
 
-  <tr><td></td><td colspan="2"><hr></td><td></td></tr>
+    <tr>
+      <td></td>
+      <td colspan="2">
+        <hr>
+      </td>
+      <td></td>
+    </tr>
 
-  <tr>
-    <td></td>
-    <td class=title colspan="2">
-      <center>
-        <P align=center><IMG SRC="../images/BI-Logo-2.jpg" ALT="Ontspannende huidverzorging" width=200>&nbsp;&nbsp;&nbsp;
-    </td>
-    <td></td>
-  </tr>
+    <tr>
+      <td></td>
+      <td class=title colspan="2">
+        <center>
+          <P align=center><IMG SRC="../images/BI-Logo-2.jpg" ALT="Ontspannende huidverzorging"
+              width=200>&nbsp;&nbsp;&nbsp;
+      </td>
+      <td></td>
+    </tr>
 
-  <tr><td></td><td colspan="2"><hr></td><td></td></tr>
+    <tr>
+      <td></td>
+      <td colspan="2">
+        <hr>
+      </td>
+      <td></td>
+    </tr>
 
-  <tr>
-    <td></td>
-    <td class=tekst valign="top">
-      <UL>
-        <LI>Beautique-in Kortingskaart
-        	<p>Vanaf €40 krijgt u 1 stempel, 
-        		<br>
-        		bij 10 stempels ontvangt u €5 korting op een behandeling
-        		(v.a. €15) 
-      </UL>
-    </td>
-    <td class=tekst valign="top">
-      <p align="right">
-    </td>
-    <td></td>
-  </tr>
+    <!-- Kortingskaart
+    <tr>
+      <td></td>
+      <td class=tekst valign="top">
+        <UL>
+          <LI>Beautique-in Kortingskaart
+            <p>Vanaf â‚¬40 krijgt u 1 stempel,
+              <br>
+              bij 10 stempels ontvangt u â‚¬5 korting op een behandeling
+              (v.a. â‚¬15)
+        </UL>
+      </td>
+      <td class=tekst valign="top">
+        <p align="right">
+      </td>
+      <td></td>
+    </tr>
 
-  <tr><td></td><td colspan="2"><hr></td><td></td></tr>
+    <tr>
+      <td></td>
+      <td colspan="2">
+        <hr>
+      </td>
+      <td></td>
+    </tr>
+    -->
 
-  <tr>
-    <td></td>
-    <td class=tekst valign="top">
+    <!-- Verjaardags Korting -->
+    <tr>
+      <td></td>
+      <td class=tekst valign="top">
+        <UL>
+          <LI>Verjaardagskorting bij Beautique-in 
+        </UL>
+      </td>
+      <td class=tekst valign="top">
+        <p align="right">
+      </td>
+      <td></td>
+    </tr>
 
-			<p align="left">
-				Interesse in andere ontspannende activiteiten?
-				<br>Kijk dan eens op de site van <a href="http://www.healing-qigong.com/" TARGET="_blank">Healing Qigong</a> 
-			</p>
-    </td>
-  </tr>
+    <tr>
+      <td></td>
+      <td colspan="2">
+        <hr>
+      </td>
+      <td></td>
+    </tr>
 
-  <tr><td></td><td colspan="2"><hr></td><td></td></tr>
+    <tr>
+      <td></td>
+      <td class=tekst valign="top">
 
-</table>
+        <p align="left">
+          Interesse in andere ontspannende activiteiten?
+          <br>Kijk dan eens op de site van <a href="http://www.healing-qigong.com/" TARGET="_blank">Healing Qigong</a>
+        </p>
+      </td>
+    </tr>
+
+    <tr>
+      <td></td>
+      <td colspan="2">
+        <hr>
+      </td>
+      <td></td>
+    </tr>
+
+  </table>
 
 </body>
 
