--- a/content/gezicht.htm
+++ b/content/gezicht.htm
@@ -1,138 +1,153 @@
 <html>
 
 <head>
-<LINK rel="stylesheet" href="../scripts/layout.css" type="text/css">
-<script type="text/javascript">
+  <LINK rel="stylesheet" href="../scripts/layout.css" type="text/css">
+  <script type="text/javascript">
 
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-25411575-1']);
-  _gaq.push(['_trackPageview']);
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-25411575-1']);
+    _gaq.push(['_trackPageview']);
 
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
+    (function () {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
 
-</script>
+  </script>
 </head>
 
 <body bgcolor=Peachpuff>
 
 
-<table border="0" cellspacing="10" width="100%">
+  <table border="0" cellspacing="10" width="100%">
 
-<!-- Gezichtsbehandelingen -->
+    <!-- Gezichtsbehandelingen -->
 
-  <tr><td width=25></td><td colspan="3"><hr></td><td width=25></td></tr>
+    <tr>
+      <td width=25></td>
+      <td colspan="3">
+        <hr>
+      </td>
+      <td width=25></td>
+    </tr>
 
-  <tr>
-    <td></td>
-    <td class=title colspan="3">
-      <center>
-      Beautique-in Gezichtsbehandelingen
-      </center>
-    </td>
-  </tr>
+    <tr>
+      <td></td>
+      <td class=title colspan="3">
+        <center>
+          Beautique-in Gezichtsbehandelingen
+        </center>
+      </td>
+    </tr>
 
-  <tr><td width=25></td><td colspan="3"><hr></td><td width=25></td></tr>
+    <tr>
+      <td width=25></td>
+      <td colspan="3">
+        <hr>
+      </td>
+      <td width=25></td>
+    </tr>
 
-  <tr><td width=25></td><td colspan="3">&nbsp.</td><td width=25></td></tr>
+    <tr>
+      <td width=25></td>
+      <td colspan="3">&nbsp.</td>
+      <td width=25></td>
+    </tr>
 
-  <tr>
-    <td></td>
-    <td class=title colspan="3">
-      <center>
-      <P><IMG SRC="../images/gezichtsbehandeling.jpg" width=300>
-      </center>
-    </td>
-  </tr>
+    <tr>
+      <td></td>
+      <td class=title colspan="3">
+        <center>
+          <P><IMG SRC="../images/gezichtsbehandeling.jpg" width=300>
+        </center>
+      </td>
+    </tr>
 
-  <tr><td width=25></td><td colspan="3">&nbsp.</td><td width=25></td></tr>
+    <tr>
+      <td width=25></td>
+      <td colspan="3">&nbsp.</td>
+      <td width=25></td>
+    </tr>
 
-  <tr>
-    <td></td>
+    <tr>
+      <td></td>
 
-    <td class=tekst valign="top">
-      <UL>
-        <B><LI><i>San's huidverzorging - Reinigend</i></B>
-        <BR>Scrub, warm kompres, onzuiverheden verwijderen, zachte balsem
-      </UL>
-    </td>
+      <td class=tekst valign="top">
+        <UL>
+          <B>
+            <LI><i>San's huidverzorging - Reinigend</i>
+          </B>
+          <BR>Scrub, warm kompres, onzuiverheden verwijderen, kalmerende balsem
+        </UL>
+      </td>
 
-    <td class=tekst valign="top" width=100>
-      <p align="right">(45 minuten)
-    </td>
+      <td class=tekst valign="top" width=100>
+        <p align="right">(55 minuten)
+      </td>
 
-    <td class=tekst valign="top" width=90>
-      <p align="right">&#8364; 27,00
-    </td>
-  </tr>
+      <td class=tekst valign="top" width=90>
+        <p align="right">€ 28,00
+      </td>
+    </tr>
 
-  <tr><td width=25></td><td colspan="3">&nbsp.</td><td width=25></td></tr>
+    <tr>
+      <td width=25></td>
+      <td colspan="3">&nbsp.</td>
+      <td width=25></td>
+    </tr>
 
-  <tr>
-    <td></td>
+    <tr>
+      <td></td>
 
-    <td class=tekst valign="top">
-      <UL>
-        <B><LI><i>San's huidverzorging - Ontspannend</i></B>
-        <BR>Scrub, warm kompres, massage van gezicht, nek en hals met etherische olie, verzorgend masker
-      </UL>
-    </td>
+      <td class=tekst valign="top">
+        <UL>
+          <B>
+            <LI><i>Speciaal</i>
+          </B>
+          <BR>Huidreiniging met scrub, stomen, epileren, rustgevende massage van gezicht, hals en nek met etherische
+          olie, hydraterend masker
+        </UL>
+      </td>
 
-    <td class=tekst valign="top" width=100>
-      <p align="right">(55 minuten)
-    </td>
+      <td class=tekst valign="top" width=100>
+        <p align="right">(75 minuten)
+      </td>
 
-    <td class=tekst valign="top" width=90>
-      <p align="right">&#8364; 37,00
-    </td>
-  </tr>
+      <td class=tekst valign="top" width=90>
+        <p align="right">€ 45,00
+      </td>
+    </tr>
 
-  <tr><td width=25></td><td colspan="3">&nbsp.</td><td width=25></td></tr>
+    <tr>
+      <td width=25></td>
+      <td colspan="3">&nbsp.</td>
+      <td width=25></td>
+    </tr>
 
-  <tr>
-    <td></td>
+    <tr>
+      <td></td>
 
-    <td class=tekst valign="top">
-      <UL>
-        <B><LI><i>Speciaal</i></B>
-        <BR>Huidreiniging met scrub, stomen, epileren, rustgevende massage van gezicht, hals en nek met etherische olie, hydraterend masker
-      </UL>
-    </td>
+      <td class=tekst valign="top">
+        <UL>
+          <B>
+            <LI><i>Vitaal</i>
+          </B>
+          <BR>Optimale huidverzorging met scrubreiniging, stomen, epileren, ontspannende massage van gezicht, hals en nek met
+          etherische olie, vitaliserend masker, indien gewenst harsen bovenlip/kin
+        </UL>
+      </td>
 
-    <td class=tekst valign="top" width=100>
-      <p align="right">(70 minuten)
-    </td>
+      <td class=tekst valign="top" width=90>
+        <p align="right">(80 minuten)
+      </td>
 
-    <td class=tekst valign="top" width=90>
-      <p align="right">&#8364; 45,00
-    </td>
-  </tr>
+      <td class=tekst valign="top" width=90>
+        <p align="right">€ 47,00
+      </td>
+    </tr>
 
-  <tr><td width=25></td><td colspan="3">&nbsp.</td><td width=25></td></tr>
-
-  <tr>
-    <td></td>
-
-    <td class=tekst valign="top">
-      <UL>
-        <B><LI><i>Vitaal</i></B>
-        <BR>Optimale huidverzorging met scrubreiniging, stomen, epileren, massage van gezicht, hals en nek met etherische olie, vitaliserend masker, evt. harsen bovenlip/kin of uitgebreide massage
-      </UL>
-    </td>
-
-    <td class=tekst valign="top" width=90>
-      <p align="right">(75 minuten)
-    </td>
-
-    <td class=tekst valign="top" width=90>
-      <p align="right">&#8364; 47,00
-    </td>
-  </tr>
-
-</table>
+  </table>
 
 </body>
 
