Replaced some special haracters with  HTML character codes

--- a/content/diversen.htm
+++ b/content/diversen.htm
@@ -79,10 +79,10 @@
       <td class=tekst valign="top">
         <UL>
           <LI>Beautique-in Kortingskaart
-            <p>Vanaf €40 krijgt u 1 stempel,
+            <p>Vanaf &euro;40 krijgt u 1 stempel,
               <br>
-              bij 10 stempels ontvangt u €5 korting op een behandeling
-              (v.a. €15)
+              bij 10 stempels ontvangt u &euro;5 korting op een behandeling
+              (v.a. &euro;15)
         </UL>
       </td>
       <td class=tekst valign="top">
