--- a/content/gezicht.htm
+++ b/content/gezicht.htm
@@ -87,7 +87,7 @@
       </td>
 
       <td class=tekst valign="top" width=90>
-        <p align="right">€ 28,00
+        <p align="right">&euro; 28,00
       </td>
     </tr>
 
@@ -115,7 +115,7 @@
       </td>
 
       <td class=tekst valign="top" width=90>
-        <p align="right">€ 45,00
+        <p align="right">&euro; 45,00
       </td>
     </tr>
 
@@ -143,7 +143,7 @@
       </td>
 
       <td class=tekst valign="top" width=90>
-        <p align="right">€ 47,00
+        <p align="right">&euro; 47,00
       </td>
     </tr>
 
