--- a/content/handvoet.htm
+++ b/content/handvoet.htm
@@ -76,7 +76,7 @@
       </td>
 
       <td class=tekst valign="top" width=120>
-        <p align="right">€ 25,00
+        <p align="right">&euro; 25,00
       </td>
     </tr>
 
@@ -91,7 +91,7 @@
 
       <td class=tekst valign="top" width=120>
         <p align="right">
-          € 9,95
+          &euro; 9,95
       </td>
     </tr>
 
@@ -106,7 +106,7 @@
 
       <td class=tekst valign="top" width=120>
         <p align="right">
-          € 5,00
+          &euro; 5,00
       </td>
     </tr>
 
@@ -127,7 +127,7 @@
 
       <td class=tekst valign="top" width=120>
         <p align="right">
-          <BR>€ 9,95
+          <BR>&euro; 9,95
       </td>
     </tr>
 
