--- a/content/lichaam.htm
+++ b/content/lichaam.htm
@@ -75,7 +75,7 @@
           <B>
             <LI><i>Ontspannend</i>
           </B>
-          <BR>Een combinatie van Klassieke en Shiatsu massage van rug, nek en schouders met warme, aromatische oliën
+          <BR>Een combinatie van Klassieke en Shiatsu massage van rug, nek en schouders met warme, aromatische oli&euml;n
         </UL>
       </td>
 
@@ -84,7 +84,7 @@
       </td>
 
       <td class=tekst valign="top" width=90>
-        <p align="right">€ 15,00<br>€ 20,00<br>€ 25,00
+        <p align="right">&euro; 15,00<br>&euro; 20,00<br>&euro; 25,00
       </td>
     </tr>
 
@@ -112,7 +112,7 @@
       </td>
 
       <td class=tekst valign="top" width=90>
-        <p align="right"><BR>&nbsp<BR>€ 57,00
+        <p align="right"><BR>&nbsp<BR>&euro; 57,00
       </td>
     </tr>
 
@@ -130,7 +130,7 @@
       </td>
 
       <td class=tekst valign="top" width=90>
-        <p align="right">€ 70,00
+        <p align="right">&euro; 70,00
       </td>
     </tr>
 
