--- a/content/harsen.htm
+++ b/content/harsen.htm
@@ -90,7 +90,7 @@
       </td>
 
       <td class=tekst valign="top">
-        <p align="right">€ 12,75</b>
+        <p align="right">&euro; 12,75</b>
       </td>
     </tr>
 
@@ -104,7 +104,7 @@
       </td>
 
       <td class=tekst valign="top">
-        <p align="right">€ 15,00
+        <p align="right">&euro; 15,00
       </td>
     </tr>
 
@@ -113,12 +113,12 @@
 
       <td class=tekst valign="top">
         <UL>
-          <LI>Onderbenen en knieën
+          <LI>Onderbenen en knie&euml;n
         </UL>
       </td>
 
       <td class=tekst valign="top">
-        <p align="right">€ 20,00
+        <p align="right">&euro; 20,00
       </td>
     </tr>
 
@@ -132,7 +132,7 @@
       </td>
 
       <td class=tekst valign="top">
-        <p align="right">€ 12,75
+        <p align="right">&euro; 12,75
       </td>
     </tr>
 
@@ -146,7 +146,7 @@
       </td>
 
       <td class=tekst valign="top">
-        <p align="right">€ 12,75
+        <p align="right">&euro; 12,75
       </td>
     </tr>
 
