Remove phone number

--- a/content/contact.htm
+++ b/content/contact.htm
@@ -66,7 +66,8 @@
       </td>
 
       <td class=tekst>
-        Voor behandelingsafspraak of informatie e-mail of bel met:
+        <!-- Voor behandelingsafspraak of informatie e-mail of bel met: -->
+        Voor behandelingsafspraak of informatie neem contact op met:
         <P>Sandra Valkenburg
           <BR>Stivas Gediplomeerd Schoonheidsspecialiste
         <P>E-mail: <a href="mailto:info@beautique-in.nl?Subject=E-mail t.a.v. Beautique-in">info@beautique-in.nl</a>
