Change some prices

--- a/content/gezicht.htm
+++ b/content/gezicht.htm
@@ -76,7 +76,7 @@
       <td class=tekst valign="top">
         <UL>
           <B>
-            <LI><i>San's huidverzorging - Reinigend</i>
+            <LI><i>Reinigend</i>
           </B>
           <BR>Scrub, warm kompres, onzuiverheden verwijderen, kalmerende balsem
         </UL>
