--- a/content/lichaam.htm
+++ b/content/lichaam.htm
@@ -80,11 +80,11 @@
       </td>
 
       <td class=tekst valign="top" width=110>
-        <p align="right">(20 minuten)<br>(30 minuten)<br>(45 minuten)
+        <p align="right">(25 minuten)<br>(45 minuten)
       </td>
 
       <td class=tekst valign="top" width=90>
-        <p align="right">&euro; 15,00<br>&euro; 20,00<br>&euro; 25,00
+        <p align="right">&euro; 20,00<br>&euro; 25,00
       </td>
     </tr>
 
@@ -98,21 +98,21 @@
       <td></td>
 
       <td class=tekst valign="top">
-        <UL>
-          <B>
-            <LI><i>Gezichtsbehandeling combinaties</i>
-          </B>
-          <BR>&nbsp
-          <BR>Gezichtsbehandeling Speciaal en rugmassage met verzorgende olie
-        </UL>
+        <ul>
+          <li>
+            <b><i>San&apos;s combinatie behandelingen</i></b>
+            <br>&nbsp;
+            <br>Gezichtsbehandeling Speciaal en rugmassage met verzorgende olie
+          </li>
+        </ul>
       </td>
 
       <td class=tekst valign="top" width=90>
-        <p align="right"><BR>&nbsp<BR>(95 minuten)
+        <p align="right"><BR>&nbsp<BR>(90 minuten)
       </td>
 
       <td class=tekst valign="top" width=90>
-        <p align="right"><BR>&nbsp<BR>&euro; 57,00
+        <p align="right"><BR>&nbsp<BR>&euro; 58,00
       </td>
     </tr>
 
@@ -126,11 +126,11 @@
       </td>
 
       <td class=tekst valign="top" width=90>
-        <p align="right">(110 minuten)
+        <p align="right">(100 minuten)
       </td>
 
       <td class=tekst valign="top" width=90>
-        <p align="right">&euro; 70,00
+        <p align="right">&euro; 68,00
       </td>
     </tr>
 
