Remove obsolete phonenr

--- a/content/contact.htm
+++ b/content/contact.htm
@@ -38,7 +38,7 @@
         <P>Beautique-in
           <BR>Abdis Johannastraat 28
           <BR>2544 NE Den Haag
-          <BR>Tel. 0174 - 76 90 88
+          <!--<BR>Tel. 0174 - 76 90 88-->
       </td>
     </tr>
 
